src/objects/Subscription_History__c.object
<CustomObject>
    <description>Detail object to Subscriptions used to capture data changes from MBA</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipName>Subscription_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Subscription History Old</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Subscription History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>